--- a/YUEYUE-web/index.html
+++ b/YUEYUE-web/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" type="image/gif" href="/happy.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YUEYUE</title>
+    <style>
+      #root{
+        min-width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div id="root" style=""></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
